--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" contents="width=device-width, initial-scal=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -24,11 +24,13 @@
             </ul><br>
           </div>
           <div class="col-sm-12 col-md-9">
-            <div class="d-flex">
+            <div class="container">
+              <div class="row d-flex">
                 <button class="btn-link" data-toggle="collapse" data-target="#sidenav"><i class='fas fa-bars'></i></button><h4 ><small>{% block title %}{% endblock %}</small></h4>
+              </div>
+              <hr>
+              {% block body %}{% endblock %}
             </div>
-            <hr>
-            {% block body %}{% endblock %}
           </div>
         </div>
       </div>
