--- a/app/templates/setup/teams.html
+++ b/app/templates/setup/teams.html
@@ -9,5 +9,46 @@ SETUP CAMPAIGN - Teams
 {% endblock %}
 
 {% block body %}
+<div class="row">
+    <div class="col-12">
+    {% if message %}
 
+        <!-- the form was submitted and message exists -->
+        <p class="lead"><strong>{{ message }}</strong></p>
+
+        <!-- links -->
+
+    {% elif form %}
+        {% with errors = get_flashed_messages() %}
+            {% if errors %}
+                {% for err in errors %}
+                    <div class="alert alert-danger alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
+                    {{ err }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <form method="POST">
+            {{ form.hidden_tag() }}
+            {% for field in form %}
+                {% if field.type != 'HiddenField' and field.label.text != 'CSRF Token' and field.type != 'SubmitField' %}
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label" for="{{ field.id }}">{{ field.label }}</label>
+                    {{ field(class_="form-control col-sm-10") }}
+                </div>
+                {% endif %}
+            {% endfor %}
+            {{ form.submit(class_="btn btn-primary") }}
+        </form>
+    {% else %}
+        <a href="/setup/teams/add_team" class="btn btn-outline-primary">Add Team</a>
+    {% endif %}
+    </div>
+</div>
+<div class="row">
+    <div>
+
+    </div>
+</div>
 {% endblock %}
